<resources>
    <string name="app_name">Mobile Programming</string>
    <string name="t_name">Nama</string>
    <string name="dot2">:</string>
    <string name="owner">Ikhsan Maulana</string>
    <string name="matkul">Mobile Programming</string>
    <string name="kls">Kelas</string>
    <string name="nim">20416255201192</string>
    <string name="bil1">Bilangan 1</string>
    <string name="bil2">Bilangan 2</string>
    <string name="t_kls">IF20E</string>
    <string name="t_nim">NIM</string>
    <string name="btn_add">Tambah</string>
    <string name="v_nim">20416255201192</string>
    <string name="in_bil1">Input Bilangan 1</string>
    <string name="in_bil2">Input Bilangan 2</string>
    <string name="v_kls">IF20E</string>
    <string name="btn_reset">Reset</string>
    <string name="hsl">Hasil</string>
    <string name="t_back">Kembali</string>
    <string name="t_save">Simpan</string>
    <string name="h_address">Input Alamat</string>
    <string name="t_address">Alamat</string>
    <string name="h_Jk">L atau P</string>
    <string name="t_Jk">Jenis Kelamin</string>
    <string name="h_noHp">Input No HP</string>
    <string name="t_NoHp">No HP</string>
    <string name="h_Name">Input Nama</string>
    <string name="t_Name">Nama</string>
    <string name="h_No">Input Nomor</string>
    <string name="t_No">Nomor</string>
    <string name="t_Menu">CARD MENU</string>
    <string name="t_Calc">Kalkulator</string>
    <string name="t_Insert">Tambah Data</string>
    <string name="t_View">Lihat Data</string>
    <string name="t_CLoc">Cek Lokasi</string>
    <string name="t_Loc">Lokasi</string>
    <string name="t_GLoc">Get Location</string>
</resources>